k8s/local/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-mysql
  namespace: bookiverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-mysql
  template:
    metadata:
      labels:
        app: book-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: book-mysql
  namespace: bookiverse
spec:
  selector:
    app: book-mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-mysql
  namespace: bookiverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental-mysql
  template:
    metadata:
      labels:
        app: rental-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: rental-mysql
  namespace: bookiverse
spec:
  selector:
    app: rental-mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mysql
  namespace: bookiverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mysql
  template:
    metadata:
      labels:
        app: user-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-mysql
  namespace: bookiverse
spec:
  selector:
    app: user-mysql
  ports:
    - port: 3306
      targetPort: 3306
