k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookiverse
  namespace: bookiverse
spec:
  ingressClassName: nginx
  rules:
    - host: bookiverse.local
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: book
                port:
                  number: 8081
          - path: /rentals
            pathType: Prefix
            backend:
              service:
                name: rental
                port:
                  number: 8083
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8084
